[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryptex-cli"
version = "1.1.0"
description = "Enhanced random password generator with advanced security features"
authors = [
    {name = "Tarek CHEIKH", email = "tarek@tocconsulting.fr"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "qrcode>=7.0.0",
    "boto3>=1.26.0",
    "hvac>=1.0.0",
    "keyring>=24.0.0",
    "pyzbar>=0.1.9",
    "Pillow>=9.0.0",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = [
    "password",
    "generator",
    "security",
    "cryptography",
    "cli",
    "random",
    "entropy",
]

[project.urls]
Homepage = "https://github.com/TocConsulting/cryptex"
Repository = "https://github.com/TocConsulting/cryptex"
Issues = "https://github.com/TocConsulting/cryptex/issues"
Documentation = "https://github.com/TocConsulting/cryptex#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
cryptex = "cryptex.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cryptex"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["cryptex"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]